Haskell-Tile-Language/Grammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from .\Grammar.y
-----------------------------------------------------------------------------

state 59 contains 7 reduce/reduce conflicts.
state 60 contains 2 shift/reduce conflicts.
state 65 contains 1 reduce/reduce conflicts.
state 121 contains 1 reduce/reduce conflicts.
state 122 contains 1 reduce/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseCalc -> Init                           (0)
	Init -> input Inps ';' Exp                         (1)
	Init -> Exp                                        (2)
	Exp -> place Tile                                  (3)
	Exp -> newLine                                     (4)
	Exp -> repeat '(' Num ')' '{' Exp '}'              (5)
	Exp -> for '(' var ',' Num ',' Num ')' '{' Exp '}'   (6)
	Exp -> if '(' Bool ')' '{' Exp '}' else '{' Exp '}'   (7)
	Exp -> if '(' Bool ')' '{' Exp '}'                 (8)
	Exp -> var '=' Vars                                (9)
	Exp -> Exp ';' Exp                                 (10)
	Exp -> Exp ';'                                     (11)
	Tile -> rotate '(' Num ',' Tile ')'                (12)
	Tile -> scale '(' Num ',' Tile ')'                 (13)
	Tile -> reflectX '(' Tile ')'                      (14)
	Tile -> reflectY '(' Tile ')'                      (15)
	Tile -> conjugate '(' Tile ',' Tile ')'            (16)
	Tile -> negate '(' Tile ')'                        (17)
	Tile -> subtile '(' Tile ',' Num ',' Num ',' Num ')'   (18)
	Tile -> fill '(' Colour ',' Num ')'                (19)
	Tile -> build '{' Exp '}'                          (20)
	Tile -> var                                        (21)
	Tile -> '(' Tile ')'                               (22)
	Num -> size '(' Tile ')'                           (23)
	Num -> Num '+' Num                                 (24)
	Num -> Num '-' Num                                 (25)
	Num -> Num '*' Num                                 (26)
	Num -> Num '/' Num                                 (27)
	Num -> Num '%' Num                                 (28)
	Num -> '-' Num                                     (29)
	Num -> int                                         (30)
	Num -> var                                         (31)
	Num -> '(' Num ')'                                 (32)
	Bool -> true                                       (33)
	Bool -> false                                      (34)
	Bool -> Bool AND Bool                              (35)
	Bool -> Bool OR Bool                               (36)
	Bool -> NOT Bool                                   (37)
	Bool -> Num '<' Num                                (38)
	Bool -> Num '>' Num                                (39)
	Bool -> Num '<' '=' Num                            (40)
	Bool -> Num '>' '=' Num                            (41)
	Bool -> var                                        (42)
	Bool -> Vars '=' '=' Vars                          (43)
	Bool -> '(' Bool ')'                               (44)
	Vars -> Num                                        (45)
	Vars -> Bool                                       (46)
	Vars -> Tile                                       (47)
	Vars -> '~' var                                    (48)
	Inps -> var                                        (49)
	Inps -> var ',' Inps                               (50)
	Colour -> white                                    (51)
	Colour -> black                                    (52)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	input          { TokenInput _ }
	place          { TokenPlace _ }
	newLine        { TokenNewLine _ }
	repeat         { TokenRepeat _ }
	for            { TokenFor _ }
	if             { TokenIf _ }
	else           { TokenElse _ }
	rotate         { TokenRotate _ }
	scale          { TokenScale _ }
	size           { TokenSize _ }
	reflectX       { TokenReflectX _ }
	reflectY       { TokenReflectY _ }
	conjugate      { TokenConjugate _ }
	negate         { TokenNegate _ }
	subtile        { TokenSubtile _ }
	fill           { TokenFill _ }
	build          { TokenBuild _ }
	'{'            { TokenLeftCurly _ }
	'}'            { TokenRightCurly _ }
	'('            { TokenLeftParen _ }
	')'            { TokenRightParen _ }
	','            { TokenComma _ }
	'+'            { TokenPlus _ }
	'-'            { TokenMinus _ }
	'/'            { TokenDivide _ }
	'*'            { TokenMultiply _ }
	'%'            { TokenMod _ }
	'='            { TokenEq _ }
	'<'            { TokenLessThan _ }
	'>'            { TokenGreaterThan _ }
	';'            { TokenSemiColon _ }
	'~'            { TokenTilde _ }
	true           { TokenTrue _ }
	false          { TokenFalse _ }
	AND            { TokenAnd _ }
	OR             { TokenOr _ }
	NOT            { TokenNot _ }
	int            { TokenInt _ $$ }
	var            { TokenVar _ $$ }
	white          { TokenWhite _ }
	black          { TokenBlack _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseCalc rule  0
	Init            rules 1, 2
	Exp             rules 3, 4, 5, 6, 7, 8, 9, 10, 11
	Tile            rules 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22
	Num             rules 23, 24, 25, 26, 27, 28, 29, 30, 31, 32
	Bool            rules 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44
	Vars            rules 45, 46, 47, 48
	Inps            rules 49, 50
	Colour          rules 51, 52

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseCalc -> . Init                          (rule 0)

	input          shift, and enter state 2
	place          shift, and enter state 5
	newLine        shift, and enter state 6
	repeat         shift, and enter state 7
	for            shift, and enter state 8
	if             shift, and enter state 9
	var            shift, and enter state 10

	Init           goto state 3
	Exp            goto state 4

State 1

	Init -> . input Inps ';' Exp                        (rule 1)

	input          shift, and enter state 2


State 2

	Init -> input . Inps ';' Exp                        (rule 1)

	var            shift, and enter state 29

	Inps           goto state 28

State 3

	%start_parseCalc -> Init .                          (rule 0)

	%eof           accept


State 4

	Init -> Exp .                                       (rule 2)
	Exp -> Exp . ';' Exp                                (rule 10)
	Exp -> Exp . ';'                                    (rule 11)

	';'            shift, and enter state 27
	%eof           reduce using rule 2


State 5

	Exp -> place . Tile                                 (rule 3)

	rotate         shift, and enter state 16
	scale          shift, and enter state 17
	reflectX       shift, and enter state 18
	reflectY       shift, and enter state 19
	conjugate      shift, and enter state 20
	negate         shift, and enter state 21
	subtile        shift, and enter state 22
	fill           shift, and enter state 23
	build          shift, and enter state 24
	'('            shift, and enter state 25
	var            shift, and enter state 26

	Tile           goto state 15

State 6

	Exp -> newLine .                                    (rule 4)

	'}'            reduce using rule 4
	';'            reduce using rule 4
	%eof           reduce using rule 4


State 7

	Exp -> repeat . '(' Num ')' '{' Exp '}'             (rule 5)

	'('            shift, and enter state 14


State 8

	Exp -> for . '(' var ',' Num ',' Num ')' '{' Exp '}'    (rule 6)

	'('            shift, and enter state 13


State 9

	Exp -> if . '(' Bool ')' '{' Exp '}' else '{' Exp '}'    (rule 7)
	Exp -> if . '(' Bool ')' '{' Exp '}'                (rule 8)

	'('            shift, and enter state 12


State 10

	Exp -> var . '=' Vars                               (rule 9)

	'='            shift, and enter state 11


State 11

	Exp -> var '=' . Vars                               (rule 9)

	rotate         shift, and enter state 16
	scale          shift, and enter state 17
	size           shift, and enter state 44
	reflectX       shift, and enter state 18
	reflectY       shift, and enter state 19
	conjugate      shift, and enter state 20
	negate         shift, and enter state 21
	subtile        shift, and enter state 22
	fill           shift, and enter state 23
	build          shift, and enter state 24
	'('            shift, and enter state 54
	'-'            shift, and enter state 46
	'~'            shift, and enter state 55
	true           shift, and enter state 56
	false          shift, and enter state 57
	NOT            shift, and enter state 58
	int            shift, and enter state 47
	var            shift, and enter state 59

	Tile           goto state 50
	Num            goto state 51
	Bool           goto state 60
	Vars           goto state 61

State 12

	Exp -> if '(' . Bool ')' '{' Exp '}' else '{' Exp '}'    (rule 7)
	Exp -> if '(' . Bool ')' '{' Exp '}'                (rule 8)

	rotate         shift, and enter state 16
	scale          shift, and enter state 17
	size           shift, and enter state 44
	reflectX       shift, and enter state 18
	reflectY       shift, and enter state 19
	conjugate      shift, and enter state 20
	negate         shift, and enter state 21
	subtile        shift, and enter state 22
	fill           shift, and enter state 23
	build          shift, and enter state 24
	'('            shift, and enter state 54
	'-'            shift, and enter state 46
	'~'            shift, and enter state 55
	true           shift, and enter state 56
	false          shift, and enter state 57
	NOT            shift, and enter state 58
	int            shift, and enter state 47
	var            shift, and enter state 59

	Tile           goto state 50
	Num            goto state 51
	Bool           goto state 52
	Vars           goto state 53

State 13

	Exp -> for '(' . var ',' Num ',' Num ')' '{' Exp '}'    (rule 6)

	var            shift, and enter state 49


State 14

	Exp -> repeat '(' . Num ')' '{' Exp '}'             (rule 5)

	size           shift, and enter state 44
	'('            shift, and enter state 45
	'-'            shift, and enter state 46
	int            shift, and enter state 47
	var            shift, and enter state 48

	Num            goto state 43

State 15

	Exp -> place Tile .                                 (rule 3)

	'}'            reduce using rule 3
	';'            reduce using rule 3
	%eof           reduce using rule 3


State 16

	Tile -> rotate . '(' Num ',' Tile ')'               (rule 12)

	'('            shift, and enter state 42


State 17

	Tile -> scale . '(' Num ',' Tile ')'                (rule 13)

	'('            shift, and enter state 41


State 18

	Tile -> reflectX . '(' Tile ')'                     (rule 14)

	'('            shift, and enter state 40


State 19

	Tile -> reflectY . '(' Tile ')'                     (rule 15)

	'('            shift, and enter state 39


State 20

	Tile -> conjugate . '(' Tile ',' Tile ')'           (rule 16)

	'('            shift, and enter state 38


State 21

	Tile -> negate . '(' Tile ')'                       (rule 17)

	'('            shift, and enter state 37


State 22

	Tile -> subtile . '(' Tile ',' Num ',' Num ',' Num ')'    (rule 18)

	'('            shift, and enter state 36


State 23

	Tile -> fill . '(' Colour ',' Num ')'               (rule 19)

	'('            shift, and enter state 35


State 24

	Tile -> build . '{' Exp '}'                         (rule 20)

	'{'            shift, and enter state 34


State 25

	Tile -> '(' . Tile ')'                              (rule 22)

	rotate         shift, and enter state 16
	scale          shift, and enter state 17
	reflectX       shift, and enter state 18
	reflectY       shift, and enter state 19
	conjugate      shift, and enter state 20
	negate         shift, and enter state 21
	subtile        shift, and enter state 22
	fill           shift, and enter state 23
	build          shift, and enter state 24
	'('            shift, and enter state 25
	var            shift, and enter state 26

	Tile           goto state 33

State 26

	Tile -> var .                                       (rule 21)

	'}'            reduce using rule 21
	')'            reduce using rule 21
	','            reduce using rule 21
	';'            reduce using rule 21
	%eof           reduce using rule 21


State 27

	Exp -> Exp ';' . Exp                                (rule 10)
	Exp -> Exp ';' .                                    (rule 11)

	place          shift, and enter state 5
	newLine        shift, and enter state 6
	repeat         shift, and enter state 7
	for            shift, and enter state 8
	if             shift, and enter state 9
	'}'            reduce using rule 11
	';'            reduce using rule 11
	var            shift, and enter state 10
	%eof           reduce using rule 11

	Exp            goto state 32

State 28

	Init -> input Inps . ';' Exp                        (rule 1)

	';'            shift, and enter state 31


State 29

	Inps -> var .                                       (rule 49)
	Inps -> var . ',' Inps                              (rule 50)

	','            shift, and enter state 30
	';'            reduce using rule 49


State 30

	Inps -> var ',' . Inps                              (rule 50)

	var            shift, and enter state 29

	Inps           goto state 96

State 31

	Init -> input Inps ';' . Exp                        (rule 1)

	place          shift, and enter state 5
	newLine        shift, and enter state 6
	repeat         shift, and enter state 7
	for            shift, and enter state 8
	if             shift, and enter state 9
	var            shift, and enter state 10

	Exp            goto state 95

State 32

	Exp -> Exp . ';' Exp                                (rule 10)
	Exp -> Exp ';' Exp .                                (rule 10)
	Exp -> Exp . ';'                                    (rule 11)

	'}'            reduce using rule 10
	';'            reduce using rule 10
	%eof           reduce using rule 10


State 33

	Tile -> '(' Tile . ')'                              (rule 22)

	')'            shift, and enter state 94


State 34

	Tile -> build '{' . Exp '}'                         (rule 20)

	place          shift, and enter state 5
	newLine        shift, and enter state 6
	repeat         shift, and enter state 7
	for            shift, and enter state 8
	if             shift, and enter state 9
	var            shift, and enter state 10

	Exp            goto state 93

State 35

	Tile -> fill '(' . Colour ',' Num ')'               (rule 19)

	white          shift, and enter state 91
	black          shift, and enter state 92

	Colour         goto state 90

State 36

	Tile -> subtile '(' . Tile ',' Num ',' Num ',' Num ')'    (rule 18)

	rotate         shift, and enter state 16
	scale          shift, and enter state 17
	reflectX       shift, and enter state 18
	reflectY       shift, and enter state 19
	conjugate      shift, and enter state 20
	negate         shift, and enter state 21
	subtile        shift, and enter state 22
	fill           shift, and enter state 23
	build          shift, and enter state 24
	'('            shift, and enter state 25
	var            shift, and enter state 26

	Tile           goto state 89

State 37

	Tile -> negate '(' . Tile ')'                       (rule 17)

	rotate         shift, and enter state 16
	scale          shift, and enter state 17
	reflectX       shift, and enter state 18
	reflectY       shift, and enter state 19
	conjugate      shift, and enter state 20
	negate         shift, and enter state 21
	subtile        shift, and enter state 22
	fill           shift, and enter state 23
	build          shift, and enter state 24
	'('            shift, and enter state 25
	var            shift, and enter state 26

	Tile           goto state 88

State 38

	Tile -> conjugate '(' . Tile ',' Tile ')'           (rule 16)

	rotate         shift, and enter state 16
	scale          shift, and enter state 17
	reflectX       shift, and enter state 18
	reflectY       shift, and enter state 19
	conjugate      shift, and enter state 20
	negate         shift, and enter state 21
	subtile        shift, and enter state 22
	fill           shift, and enter state 23
	build          shift, and enter state 24
	'('            shift, and enter state 25
	var            shift, and enter state 26

	Tile           goto state 87

State 39

	Tile -> reflectY '(' . Tile ')'                     (rule 15)

	rotate         shift, and enter state 16
	scale          shift, and enter state 17
	reflectX       shift, and enter state 18
	reflectY       shift, and enter state 19
	conjugate      shift, and enter state 20
	negate         shift, and enter state 21
	subtile        shift, and enter state 22
	fill           shift, and enter state 23
	build          shift, and enter state 24
	'('            shift, and enter state 25
	var            shift, and enter state 26

	Tile           goto state 86

State 40

	Tile -> reflectX '(' . Tile ')'                     (rule 14)

	rotate         shift, and enter state 16
	scale          shift, and enter state 17
	reflectX       shift, and enter state 18
	reflectY       shift, and enter state 19
	conjugate      shift, and enter state 20
	negate         shift, and enter state 21
	subtile        shift, and enter state 22
	fill           shift, and enter state 23
	build          shift, and enter state 24
	'('            shift, and enter state 25
	var            shift, and enter state 26

	Tile           goto state 85

State 41

	Tile -> scale '(' . Num ',' Tile ')'                (rule 13)

	size           shift, and enter state 44
	'('            shift, and enter state 45
	'-'            shift, and enter state 46
	int            shift, and enter state 47
	var            shift, and enter state 48

	Num            goto state 84

State 42

	Tile -> rotate '(' . Num ',' Tile ')'               (rule 12)

	size           shift, and enter state 44
	'('            shift, and enter state 45
	'-'            shift, and enter state 46
	int            shift, and enter state 47
	var            shift, and enter state 48

	Num            goto state 83

State 43

	Exp -> repeat '(' Num . ')' '{' Exp '}'             (rule 5)
	Num -> Num . '+' Num                                (rule 24)
	Num -> Num . '-' Num                                (rule 25)
	Num -> Num . '*' Num                                (rule 26)
	Num -> Num . '/' Num                                (rule 27)
	Num -> Num . '%' Num                                (rule 28)

	')'            shift, and enter state 82
	'+'            shift, and enter state 71
	'-'            shift, and enter state 72
	'/'            shift, and enter state 73
	'*'            shift, and enter state 74
	'%'            shift, and enter state 75


State 44

	Num -> size . '(' Tile ')'                          (rule 23)

	'('            shift, and enter state 81


State 45

	Num -> '(' . Num ')'                                (rule 32)

	size           shift, and enter state 44
	'('            shift, and enter state 45
	'-'            shift, and enter state 46
	int            shift, and enter state 47
	var            shift, and enter state 48

	Num            goto state 80

State 46

	Num -> '-' . Num                                    (rule 29)

	size           shift, and enter state 44
	'('            shift, and enter state 45
	'-'            shift, and enter state 46
	int            shift, and enter state 47
	var            shift, and enter state 48

	Num            goto state 79

State 47

	Num -> int .                                        (rule 30)

	'}'            reduce using rule 30
	')'            reduce using rule 30
	','            reduce using rule 30
	'+'            reduce using rule 30
	'-'            reduce using rule 30
	'/'            reduce using rule 30
	'*'            reduce using rule 30
	'%'            reduce using rule 30
	'='            reduce using rule 30
	'<'            reduce using rule 30
	'>'            reduce using rule 30
	';'            reduce using rule 30
	AND            reduce using rule 30
	OR             reduce using rule 30
	%eof           reduce using rule 30


State 48

	Num -> var .                                        (rule 31)

	'}'            reduce using rule 31
	')'            reduce using rule 31
	','            reduce using rule 31
	'+'            reduce using rule 31
	'-'            reduce using rule 31
	'/'            reduce using rule 31
	'*'            reduce using rule 31
	'%'            reduce using rule 31
	'='            reduce using rule 31
	'<'            reduce using rule 31
	'>'            reduce using rule 31
	';'            reduce using rule 31
	AND            reduce using rule 31
	OR             reduce using rule 31
	%eof           reduce using rule 31


State 49

	Exp -> for '(' var . ',' Num ',' Num ')' '{' Exp '}'    (rule 6)

	','            shift, and enter state 78


State 50

	Vars -> Tile .                                      (rule 47)

	'}'            reduce using rule 47
	')'            reduce using rule 47
	'='            reduce using rule 47
	';'            reduce using rule 47
	AND            reduce using rule 47
	OR             reduce using rule 47
	%eof           reduce using rule 47


State 51

	Num -> Num . '+' Num                                (rule 24)
	Num -> Num . '-' Num                                (rule 25)
	Num -> Num . '*' Num                                (rule 26)
	Num -> Num . '/' Num                                (rule 27)
	Num -> Num . '%' Num                                (rule 28)
	Bool -> Num . '<' Num                               (rule 38)
	Bool -> Num . '>' Num                               (rule 39)
	Bool -> Num . '<' '=' Num                           (rule 40)
	Bool -> Num . '>' '=' Num                           (rule 41)
	Vars -> Num .                                       (rule 45)

	'}'            reduce using rule 45
	')'            reduce using rule 45
	'+'            shift, and enter state 71
	'-'            shift, and enter state 72
	'/'            shift, and enter state 73
	'*'            shift, and enter state 74
	'%'            shift, and enter state 75
	'='            reduce using rule 45
	'<'            shift, and enter state 76
	'>'            shift, and enter state 77
	';'            reduce using rule 45
	AND            reduce using rule 45
	OR             reduce using rule 45
	%eof           reduce using rule 45


State 52

	Exp -> if '(' Bool . ')' '{' Exp '}' else '{' Exp '}'    (rule 7)
	Exp -> if '(' Bool . ')' '{' Exp '}'                (rule 8)
	Bool -> Bool . AND Bool                             (rule 35)
	Bool -> Bool . OR Bool                              (rule 36)
	Vars -> Bool .                                      (rule 46)

	')'            shift, and enter state 70
	'='            reduce using rule 46
	AND            shift, and enter state 63
	OR             shift, and enter state 64


State 53

	Bool -> Vars . '=' '=' Vars                         (rule 43)

	'='            shift, and enter state 62


State 54

	Tile -> '(' . Tile ')'                              (rule 22)
	Num -> '(' . Num ')'                                (rule 32)
	Bool -> '(' . Bool ')'                              (rule 44)

	rotate         shift, and enter state 16
	scale          shift, and enter state 17
	size           shift, and enter state 44
	reflectX       shift, and enter state 18
	reflectY       shift, and enter state 19
	conjugate      shift, and enter state 20
	negate         shift, and enter state 21
	subtile        shift, and enter state 22
	fill           shift, and enter state 23
	build          shift, and enter state 24
	'('            shift, and enter state 54
	'-'            shift, and enter state 46
	'~'            shift, and enter state 55
	true           shift, and enter state 56
	false          shift, and enter state 57
	NOT            shift, and enter state 58
	int            shift, and enter state 47
	var            shift, and enter state 59

	Tile           goto state 67
	Num            goto state 68
	Bool           goto state 69
	Vars           goto state 53

State 55

	Vars -> '~' . var                                   (rule 48)

	var            shift, and enter state 66


State 56

	Bool -> true .                                      (rule 33)

	'}'            reduce using rule 33
	')'            reduce using rule 33
	'='            reduce using rule 33
	';'            reduce using rule 33
	AND            reduce using rule 33
	OR             reduce using rule 33
	%eof           reduce using rule 33


State 57

	Bool -> false .                                     (rule 34)

	'}'            reduce using rule 34
	')'            reduce using rule 34
	'='            reduce using rule 34
	';'            reduce using rule 34
	AND            reduce using rule 34
	OR             reduce using rule 34
	%eof           reduce using rule 34


State 58

	Bool -> NOT . Bool                                  (rule 37)

	rotate         shift, and enter state 16
	scale          shift, and enter state 17
	size           shift, and enter state 44
	reflectX       shift, and enter state 18
	reflectY       shift, and enter state 19
	conjugate      shift, and enter state 20
	negate         shift, and enter state 21
	subtile        shift, and enter state 22
	fill           shift, and enter state 23
	build          shift, and enter state 24
	'('            shift, and enter state 54
	'-'            shift, and enter state 46
	'~'            shift, and enter state 55
	true           shift, and enter state 56
	false          shift, and enter state 57
	NOT            shift, and enter state 58
	int            shift, and enter state 47
	var            shift, and enter state 59

	Tile           goto state 50
	Num            goto state 51
	Bool           goto state 65
	Vars           goto state 53

State 59

	Tile -> var .                                       (rule 21)
	Num -> var .                                        (rule 31)
	Bool -> var .                                       (rule 42)

	'}'            reduce using rule 42
			(reduce using rule 31)
			(reduce using rule 21)

	')'            reduce using rule 42
			(reduce using rule 31)
			(reduce using rule 21)

	'+'            reduce using rule 31
	'-'            reduce using rule 31
	'/'            reduce using rule 31
	'*'            reduce using rule 31
	'%'            reduce using rule 31
	'='            reduce using rule 42
			(reduce using rule 31)
			(reduce using rule 21)

	'<'            reduce using rule 31
	'>'            reduce using rule 31
	';'            reduce using rule 42
			(reduce using rule 31)
			(reduce using rule 21)

	AND            reduce using rule 42
			(reduce using rule 31)
			(reduce using rule 21)

	OR             reduce using rule 42
			(reduce using rule 31)
			(reduce using rule 21)

	%eof           reduce using rule 42
			(reduce using rule 31)
			(reduce using rule 21)



State 60

	Bool -> Bool . AND Bool                             (rule 35)
	Bool -> Bool . OR Bool                              (rule 36)
	Vars -> Bool .                                      (rule 46)

	'}'            reduce using rule 46
	')'            reduce using rule 46
	'='            reduce using rule 46
	';'            reduce using rule 46
	AND            shift, and enter state 63
			(reduce using rule 46)

	OR             shift, and enter state 64
			(reduce using rule 46)

	%eof           reduce using rule 46


State 61

	Exp -> var '=' Vars .                               (rule 9)
	Bool -> Vars . '=' '=' Vars                         (rule 43)

	'}'            reduce using rule 9
	'='            shift, and enter state 62
	';'            reduce using rule 9
	%eof           reduce using rule 9


State 62

	Bool -> Vars '=' . '=' Vars                         (rule 43)

	'='            shift, and enter state 123


State 63

	Bool -> Bool AND . Bool                             (rule 35)

	rotate         shift, and enter state 16
	scale          shift, and enter state 17
	size           shift, and enter state 44
	reflectX       shift, and enter state 18
	reflectY       shift, and enter state 19
	conjugate      shift, and enter state 20
	negate         shift, and enter state 21
	subtile        shift, and enter state 22
	fill           shift, and enter state 23
	build          shift, and enter state 24
	'('            shift, and enter state 54
	'-'            shift, and enter state 46
	'~'            shift, and enter state 55
	true           shift, and enter state 56
	false          shift, and enter state 57
	NOT            shift, and enter state 58
	int            shift, and enter state 47
	var            shift, and enter state 59

	Tile           goto state 50
	Num            goto state 51
	Bool           goto state 122
	Vars           goto state 53

State 64

	Bool -> Bool OR . Bool                              (rule 36)

	rotate         shift, and enter state 16
	scale          shift, and enter state 17
	size           shift, and enter state 44
	reflectX       shift, and enter state 18
	reflectY       shift, and enter state 19
	conjugate      shift, and enter state 20
	negate         shift, and enter state 21
	subtile        shift, and enter state 22
	fill           shift, and enter state 23
	build          shift, and enter state 24
	'('            shift, and enter state 54
	'-'            shift, and enter state 46
	'~'            shift, and enter state 55
	true           shift, and enter state 56
	false          shift, and enter state 57
	NOT            shift, and enter state 58
	int            shift, and enter state 47
	var            shift, and enter state 59

	Tile           goto state 50
	Num            goto state 51
	Bool           goto state 121
	Vars           goto state 53

State 65

	Bool -> Bool . AND Bool                             (rule 35)
	Bool -> Bool . OR Bool                              (rule 36)
	Bool -> NOT Bool .                                  (rule 37)
	Vars -> Bool .                                      (rule 46)

	'}'            reduce using rule 37
	')'            reduce using rule 37
	'='            reduce using rule 46
			(reduce using rule 37)

	';'            reduce using rule 37
	AND            reduce using rule 37
	OR             reduce using rule 37
	%eof           reduce using rule 37


State 66

	Vars -> '~' var .                                   (rule 48)

	'}'            reduce using rule 48
	')'            reduce using rule 48
	'='            reduce using rule 48
	';'            reduce using rule 48
	AND            reduce using rule 48
	OR             reduce using rule 48
	%eof           reduce using rule 48


State 67

	Tile -> '(' Tile . ')'                              (rule 22)
	Vars -> Tile .                                      (rule 47)

	')'            shift, and enter state 94
	'='            reduce using rule 47


State 68

	Num -> Num . '+' Num                                (rule 24)
	Num -> Num . '-' Num                                (rule 25)
	Num -> Num . '*' Num                                (rule 26)
	Num -> Num . '/' Num                                (rule 27)
	Num -> Num . '%' Num                                (rule 28)
	Num -> '(' Num . ')'                                (rule 32)
	Bool -> Num . '<' Num                               (rule 38)
	Bool -> Num . '>' Num                               (rule 39)
	Bool -> Num . '<' '=' Num                           (rule 40)
	Bool -> Num . '>' '=' Num                           (rule 41)
	Vars -> Num .                                       (rule 45)

	')'            shift, and enter state 108
	'+'            shift, and enter state 71
	'-'            shift, and enter state 72
	'/'            shift, and enter state 73
	'*'            shift, and enter state 74
	'%'            shift, and enter state 75
	'='            reduce using rule 45
	'<'            shift, and enter state 76
	'>'            shift, and enter state 77


State 69

	Bool -> Bool . AND Bool                             (rule 35)
	Bool -> Bool . OR Bool                              (rule 36)
	Bool -> '(' Bool . ')'                              (rule 44)
	Vars -> Bool .                                      (rule 46)
